UILoader: Added this class to handle UI loading ViewOwner: Got rid of createUIForClass(), getUISource() weirdness ViewEnv: Got rid of getUISource(class)